fix error in Portfolio Assignment

--- a/2 CSS/PortfolioBreakdownProblem/Portfolio.css
+++ b/2 CSS/PortfolioBreakdownProblem/Portfolio.css
@@ -149,7 +149,7 @@ body *{
     display:inline-block;
     /* original */
 }
-#social-image {
+.social-image {
     /* .footer img { */
     width: 25px;
     height: auto;
